@@ -700,6 +700,142 @@ literal|"name"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|fld
+operator|=
+name|getField
+argument_list|(
+literal|"title_underscore"
+argument_list|,
+literal|"string"
+argument_list|,
+literal|"\\s+"
+argument_list|,
+literal|"title"
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|fld
+operator|.
+name|put
+argument_list|(
+name|REPLACE_WITH
+argument_list|,
+literal|"_"
+argument_list|)
+expr_stmt|;
+name|fields
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|fields
+operator|.
+name|add
+argument_list|(
+name|fld
+argument_list|)
+expr_stmt|;
+name|context
+operator|=
+name|getContext
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|Context
+operator|.
+name|FULL_DUMP
+argument_list|,
+name|fields
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|src
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|src
+operator|.
+name|put
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"value with spaces"
+argument_list|)
+expr_stmt|;
+comment|// a value which will match the regex
+name|result
+operator|=
+operator|new
+name|RegexTransformer
+argument_list|()
+operator|.
+name|transformRow
+argument_list|(
+name|src
+argument_list|,
+name|context
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"value_with_spaces"
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|"title_underscore"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|src
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+name|src
+operator|.
+name|put
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"valueWithoutSpaces"
+argument_list|)
+expr_stmt|;
+comment|// value which will not match regex
+name|result
+operator|=
+operator|new
+name|RegexTransformer
+argument_list|()
+operator|.
+name|transformRow
+argument_list|(
+name|src
+argument_list|,
+name|context
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"valueWithoutSpaces"
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|"title_underscore"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// value should be returned as-is
 block|}
 annotation|@
 name|Test
@@ -787,7 +923,7 @@ argument_list|(
 name|fld
 argument_list|)
 expr_stmt|;
-comment|//  **ATTEMPTS** a match WITH a replaceWith
+comment|//  **ATTEMPTS** a match WITH a replaceWith (should return original data)
 comment|//<field column="t2" sourceColName="rowdata" regexp="duff" replaceWith="60"/>
 name|fld
 operator|=
@@ -961,12 +1097,24 @@ argument_list|)
 decl_stmt|;
 name|assertEquals
 argument_list|(
-literal|5
+literal|6
 argument_list|,
 name|result
 operator|.
 name|size
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|s
+argument_list|,
+name|result
+operator|.
+name|get
+argument_list|(
+literal|"t2"
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|assertEquals
